wasm/fastq_to_mfasta_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_g8efkeen/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/64653b1866cf7b0110cc76a4641bfe91aaae634f.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/64653b1866cf7b0110cc76a4641bfe91aaae634f.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/700a891e20b41797367f5ad3a36ceee5ab2786db.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/700a891e20b41797367f5ad3a36ceee5ab2786db.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/cfc2019e387d8cc8418ff043d6aca96a5186d136.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/cfc2019e387d8cc8418ff043d6aca96a5186d136.json" for subsequent builds)
cache:INFO:  - ok
